<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billTotWithTaxLabel"
        android:layout_width="175dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:includeFontPadding="true"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:text="@string/bill_total_with_tax"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tipPercentLabel"
        android:layout_width="175dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:includeFontPadding="true"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:text="@string/tip_percent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billTotWithTaxLabel" />

    <TextView
        android:id="@+id/tipAmountLabel"
        android:layout_width="175dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:includeFontPadding="true"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:text="@string/tip_amount"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentRG" />

    <TextView
        android:id="@+id/totalWithTip"
        android:layout_width="175dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:includeFontPadding="true"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:text="@string/total_with_tip"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipAmountLabel" />

    <TextView
        android:id="@+id/numOfPeopleLabel"
        android:layout_width="182dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-light"
        android:includeFontPadding="true"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:text="@string/number_of_people"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalWithTip"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/totalPerPerson"
        android:layout_width="180dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-light"
        android:includeFontPadding="true"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:text="@string/total_per_person"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfPeopleLabel" />

    <TextView
        android:id="@+id/overage"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-light"
        android:includeFontPadding="true"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:text="@string/overage"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalPerPerson" />

    <EditText
        android:id="@+id/billTotal"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#DDBADFBB"
        android:ems="10"
        android:hint="@string/_0_00_bt"
        android:includeFontPadding="true"
        android:inputType="number|numberDecimal"
        android:labelFor="@id/billTotWithTaxLabel"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/billTotWithTaxLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/numOfPplTxt"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#DDBADFBB"
        android:ems="10"
        android:hint="@string/_1"
        android:includeFontPadding="true"
        android:inputType="number"
        android:labelFor="@id/numOfPeopleLabel"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/numOfPeopleLabel"
        app:layout_constraintTop_toBottomOf="@+id/totWithTipTxt"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/goBtn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="goBtn"
        android:text="@string/goBtn"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toEndOf="@+id/numOfPplTxt"
        app:layout_constraintTop_toBottomOf="@+id/totWithTipTxt"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/totAmtPerPersonTxt"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#61B8B3B3"
        android:hint="@string/_0_00_tapp"
        android:includeFontPadding="true"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/totalPerPerson"
        app:layout_constraintTop_toBottomOf="@+id/numOfPplTxt"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="clearAllFields"
        android:text="@string/clear"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overage" />

    <TextView
        android:id="@+id/overageTxt"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="#61B8B3B3"
        android:hint="@string/_0_00_ovg"
        android:includeFontPadding="true"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/overage"
        app:layout_constraintTop_toBottomOf="@+id/totAmtPerPersonTxt"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/totWithTipTxt"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#61B8B3B3"
        android:hint="@string/_0_00_twt"
        android:includeFontPadding="true"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalWithTip"
        app:layout_constraintTop_toBottomOf="@+id/tipAmtTxt"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tipAmtTxt"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#61B8B3B3"
        android:hint="@string/_0_00_tat"
        android:includeFontPadding="true"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tipAmountLabel"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentRG"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/tipPercentRG"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="calculateTipTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentLabel">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#673AB7"
            android:checked="false"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:onClick="calculateTipTotal"
            android:text="@string/_12"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#673AB7"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:onClick="calculateTipTotal"
            android:text="@string/_15"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#673AB7"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:onClick="calculateTipTotal"
            android:text="@string/_18"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#673AB7"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:onClick="calculateTipTotal"
            android:text="@string/_20"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>